[tool.poetry]
name = "yamlen"
version = "0.1.1"
description = "A PyYAML thin wrapper."
authors = ["Yu Mochizuki <ymoch.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ymoch/yamlen"
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup",
]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-flake8 = "^1.0.7"
pytest-mccabe = "^2.0"
pytest-mypy = "^0.8.1"
pytest-cov = "^3.0.0"
types-pyyaml = "^5.4.1"
codecov = "^2.1.12"
black = "^21.9b0"

[tool.pytest.ini_options]
testpaths = ["yamlen", "tests", "README.md"]
flake8-max-line-length = 99
mccabe-complexity = 10
addopts = [
    "--doctest-glob=*.md",
    "--flake8",
    "--mypy",
    "--mypy-ignore-missing-imports",
    "--mccabe",
    "--cov=yamlen",
    "--cov-report=term-missing",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
